--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,11 @@
 @import url("photographer.css");
+@import 'theme-colors.css';
+
 
 body {
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    max-width: 1200px; /* Set the maximum width */
+    margin: 0 auto; 
 }
 
 
@@ -14,8 +17,15 @@ header {
     height: 90px;
 }
 
+
+main {
+    margin: 0 100px;
+}
+
+
+
 h1 {
-    color: #901C1C;
+    color: var(--red);
     margin-right: 100px;
 }
 
@@ -24,27 +34,54 @@ h1 {
     margin-left: 100px;
 }
 
-.photographer_section {
+.photographers-section {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     gap: 70px;
     margin-top: 100px;
 }
 
-.photographer_section article {
-    justify-self: center;
+.photographers-section figure {
+/*    justify-self: center;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: center;*/
     flex-direction: column;
+    text-align: center;
+
 }
 
-.photographer_section article h2 {
-    color: #D3573C;
-    font-size: 36px;
+.photographers-section  h2 {
+    color: var(--red);
+    font-size: 2rem;
+    font-weight: lighter;
+    line-height: 0.6rem;
+    text-wrap: nowrap;
 }
 
-.photographer_section article img {
+.photographer-portrait {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    object-fit: cover;
+    /* justify-self: center; */
+}
+
+.photographers-section p {
+    font-size: 0.8rem;
+    line-height: 0.2rem;
+    text-align: center;
+    white-space: nowrap;
+}
+
+.photographers-section .location {
+    color: var(--red);
+}
+
+.photographers-section .tagline {
+    color: var(--black);
+}
+
+.photographers-section .price {
+    color: gray;
 }
